tests/ui/const-generics/unify_with_nested_expr.stderr
error[E0284]: type annotations needed
  --> $DIR/unify_with_nested_expr.rs:8:5
   |
LL |     bar();
   |     ^^^ cannot infer the value of the const parameter `N` declared on the function `bar`
   |
note: required by a const generic parameter in `bar`
  --> $DIR/unify_with_nested_expr.rs:12:8
   |
LL | fn bar<const N: usize>()
   |        ^^^^^^^^^^^^^^ required by this const generic parameter in `bar`
help: consider specifying the generic argument
   |
LL |     bar::<N>();
   |        +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
